Fix wrapping of tags in event info bar.

--- a/src/components/timeline/infoBar/index.module.scss
+++ b/src/components/timeline/infoBar/index.module.scss
@@ -1,6 +1,7 @@
 .info {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 1rem;
 
   font-size: 0.8rem;
@@ -10,10 +11,18 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  flex-shrink: 0;
   gap: 0.1rem;
+}
+
+.tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .tag {
   margin-right: 0.5rem;
   font-weight: bold;
+  text-wrap: nowrap;
 }
